<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="todo">todo</string>
    <string name="profile">Profile</string>
    <string name="google">Google+</string>
    <string name="your_email">Your email</string>
    <string name="don_t_have_an_account_nregister_here">Don\'t have an account.\nRegister Here</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_nlogin_here">Already have an account.\nLogin Here</string>
    <string name="logout">Logout</string>
</resources>